src/test/ui/structs/struct-pattern-match-useless.stderr
error: unreachable pattern
  --> $DIR/struct-pattern-match-useless.rs:12:9
   |
LL |         Foo { .. } => ()
   |         ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/struct-pattern-match-useless.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

